crates/ruff/tests/snapshots/lint__flake8_pyi_redundant_none_literal.snap
---
source: crates/ruff/tests/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
    - "--select"
    - PYI061
    - "--stdin-filename"
    - test.py
    - "--preview"
    - "--fix"
    - "-"
  stdin: "\nfrom typing import Literal\n\n# Ruff offers a fix for one of these, but not both of them, as if both were autofixed\n# it would result in a `TypeError` at runtime.\nx: Literal[None,] | Literal[None,]\n"
---
success: false
exit_code: 1
----- stdout -----

from typing import Literal

# Ruff offers a fix for one of these, but not both of them, as if both were autofixed
# it would result in a `TypeError` at runtime.
x: None | Literal[None,]

----- stderr -----
test.py:6:19: PYI061 Use `None` rather than `Literal[None]`
Found 2 errors (1 fixed, 1 remaining).
